# AIChatTauri

./: .gitignore  LICENSE  README.md  README_zh.md  benchmark-report.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  shell.nix  todo.md  vite.config.ts
electron/: ipc.ts  main.ts  preload.ts  tsconfig.json
src/: App.css  App.vue  api.ts  electron.d.ts  llm.ts  useApp.ts  useMarket.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: ArchivesView.vue  ChatView.vue  MarketView.vue  MemoPanel.vue  SettingsView.vue  TabBar.vue
