[package]
name = "ai-chat-tauri"
version = "0.1.0"
edition = "2021"

[lib]
name = "ai_chat_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["stream", "json", "native-tls"] }
tokio = { version = "1", features = ["full"] }
dirs = "6"
futures-util = "0.3"
